# data-analyst-agent

./: DEPLOYMENT.md  README.md  app.py  data_agent.py  gitignore.txt  pyproject.toml  query_processor.py  railway.json  replit.md  requirements-vercel.txt  requirements.txt  tool_agent_fixed.py  vercel.json  visualization.py  web_scraper.py
api/: health.py  index.py  main.py  requirements.txt
static/: style.css
templates/: index.html
